--- a/NumberPuzzle/_puzzle.css
+++ b/NumberPuzzle/_puzzle.css
@@ -12,16 +12,16 @@ body{
 /*给container设置属性，大小至少要能容纳里面所包含的所有元素*/
 #container{
 	position:relative;
-	width:310px;
+	width:620px;
 	height:420px;
 	margin:0 auto;
-	margin-top:80px;
+	margin-top:100px;
 	border-radius:1px;
 }
 /*游戏区div，大小根据小div计算，因为下面设置小方块大小为150*150
 ，所以这个大小为150*3=450px*/
 #game{
-	text-align:center;
+	position:absolute;
 	width:450px;
 	height:450px;
 	border-radius:5px;
